# bestofrs

./: Dockerfile  Dockerfile.worker  LICENSE  README.md
.github/workflows/: ci.yml  (+2 more)
crates/adapters/: Cargo.toml
crates/adapters/migrations/: 0004_repo_tags.sql
crates/adapters/migrations_postgres/: 0002_repo_tags.sql  0007_tag_description_column.sql  0009_allow_duplicate_project_name_slug.sql
crates/adapters/src/: github.rs  lib.rs  prelude.rs
crates/adapters/src/auth/: github_oauth.rs  mod.rs  role_policy.rs
crates/adapters/src/persistence/: mod.rs
crates/adapters/src/persistence/psql/: mod.rs  project_repo.rs  repo_repo.rs  repo_tag_repo.rs  snapshot_repo.rs
crates/adapters/src/persistence/sqlite/: project_repo.rs  repo_repo.rs  repo_tag_repo.rs  snapshot_repo.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  prelude.rs
crates/app/src/auth/: command.rs  mod.rs  port.rs
crates/app/src/project/: command.rs  event_handler.rs  port.rs  query.rs
crates/app/src/project/impls/: status.rs
crates/app/src/repo/: command.rs  impls.rs  mod.rs  port.rs  query.rs
crates/app/src/repo/impls/: project_override.rs
crates/app/src/snapshot/: command.rs  event_handler.rs  port.rs
crates/ui/: Cargo.toml
crates/ui/assets/: tailwind.css  theme.css
crates/ui/src/IO/: health.rs  projects.rs  repos.rs
crates/ui/src/components/: mod.rs
crates/ui/src/components/common/: breadcrumb.rs  grid_slash_transition.rs  grid_wrapper.rs  lottie_web_comp.rs  mod.rs  repo_avatar.rs  repo_manuscript_card.rs  repo_row.rs  typing_text.rs
crates/ui/src/components/icons/: mod.rs
crates/ui/src/components/layout/: fuzzy_search.rs  mod.rs
crates/ui/src/components/layout/admin/: state_hint.rs
crates/ui/src/components/layout/root/: footer.rs  fuzzy_search.rs  header_nav.rs  scroll_progress.rs
crates/ui/src/components/layout/user/: discord_link.rs  footer.rs  header_nav.rs  mod.rs
crates/ui/src/components/layout/user/fuzzy_search/: mod.rs
crates/ui/src/components/layout/user/gearmap/: mod.rs  style.css
crates/ui/src/components/ui/: mod.rs
crates/ui/src/components/ui/avatar/: component.rs  style.css
crates/ui/src/components/ui/button/: style.css
crates/ui/src/components/ui/dialog/: style.css
crates/ui/src/components/ui/input/: style.css
crates/ui/src/components/ui/pagination/: style.css
crates/ui/src/components/ui/select/: style.css
crates/ui/src/components/ui/skeleton/: style.css
crates/ui/src/components/ui/toast/: style.css
crates/ui/src/components/views/admin/: mod.rs
crates/ui/src/components/views/admin/ingest_daily_snapshots_control/: mod.rs
crates/ui/src/components/views/admin/project_management/: mod.rs
crates/ui/src/components/views/admin/projects/: mod.rs
crates/ui/src/components/views/admin/projects/project_table/: mod.rs
crates/ui/src/components/views/admin/tags_management/: mod.rs
crates/ui/src/components/views/home/: action_section.rs  faq_section.rs  mod.rs
crates/ui/src/components/views/home/rank_panel/: mod.rs  rank_tab_item.rs  repo_row.rs  time_range_button.rs
crates/ui/src/components/views/home/rank_panel/rank_panel_list/: mod.rs
crates/ui/src/components/views/login/: mod.rs
crates/ui/src/components/views/repo/detail/: chart.rs  deltas.rs  meta.rs  mod.rs  readme.rs  snapshot.rs
crates/ui/src/components/views/repo/list/: mod.rs  repo_list_handler.rs  repo_meta.rs
crates/ui/src/components/views/tag/: meta_handler.rs  mini_repo_card.rs  mod.rs  tab_menu.rs  tag_row.rs
crates/ui/src/components/views/tag/tag_list/: mod.rs  skeleton.rs
crates/ui/src/js/: chart_bridge.js  dom_bridge.js  theme_bridge.js
crates/ui/src/root/: mod.rs  routes.rs  theme.rs
crates/ui/src/root/layouts/: admin_layout.rs  root_layout.rs  user_layout.rs
crates/ui/src/root/routes/: mod.rs
crates/ui/src/root/routes/repo/: detail.rs  mod.rs
crates/ui/src/root/views/: admin.rs  home.rs  mod.rs  repo.rs  tags.rs
crates/ui/src/types/: mod.rs  projects.rs  repos.rs  search.rs  tags.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
(+27 files in other folders)
