[package]
name = "adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
app = { path = "../app" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
base64 = "0.22"
oauth2 = { version = "5", default-features = false, features = [
  "reqwest",
  "rustls-tls",
] }

sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
