[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }

async-trait = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"
