[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dioxus = { version = "0.7.7", features = ["router", "fullstack"] }
dioxus-i18n = { git = "https://github.com/dioxus-community/dioxus-i18n", tag = "v0.5.1" }
dioxus-use-js = "0.4.7"
dioxus-sdk-time = "0.7"
axum = { version = "0.8.0", optional = true }
axum_session = { version = "0.17", optional = true }
axum_session_redispool = { version = "0.8.0", optional = true }
redis_pool = { version = "0.10.0", optional = true }
redis = { version = "1.0", features = ["aio", "tokio-comp"], optional = true }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
anyhow = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
unic-langid = { version = "0.9", features = ["macros"] }
url = "2"
askama_escape = { version = "0.10", optional = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-markdown = { git = "https://github.com/rambip/rust-web-markdown", package = "dioxus-markdown" }

app = { path = "../app" }
domain = { path = "../domain" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
infra = { path = "../infra", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
  "dioxus/server",
  "dep:axum",
  "dep:axum_session",
  "dep:axum_session_redispool",
  "dep:redis_pool",
  "dep:redis",
  "dep:tokio",
  "dep:infra",
  "dep:askama_escape",
]
