[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

app = { path = "../app" }
infra = { path = "../infra" }
